--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/kevinweber/lazy-load-for-videos#readme",
   "devDependencies": {
+    "autoprefixer": "^8.6.3",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
@@ -43,6 +44,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^6.0.3",
     "webpack": "^2.2.1"
   },
