--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true,
-    "node": true,
+  extends: "eslint:recommended",
+  env: {
+    browser: true,
+    es6: true,
+    node: true,
   },
-  "extends": "eslint:recommended",
-  "globals": {
-    "jQuery": true,
-    "lazyload_video_settings": true,
+  parserOptions: {
+    ecmaVersion: 8,
+    sourceType: 'module',
   },
-  "parserOptions": {
-    "ecmaVersion": 8,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "modules": true,
-    }
+  globals: {
+    jQuery: true,
+    lazyload_video_settings: true,
   },
-  "rules": {
+  rules: {
     "no-console": "off",
     "no-unused-vars": ["warn"],
-    "semi": 2,
+    semi: 2,
   }
 }
