--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "name": "lazy-load-for-videos",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Lazy Load for Videos by [Kevin Weber](https://kevinw.de)",
   "scripts": {
-    "production": "NODE_ENV='production' webpack --progress --colors --config ./webpack.config.js -p",
+    "production": "NODE_ENV=production webpack --progress --colors --config ./webpack.config.js -p",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "npm run production -- --watch"
   },
@@ -34,19 +34,19 @@
   "homepage": "https://github.com/kevinweber/lazy-load-for-videos#readme",
   "devDependencies": {
     "autoprefixer": "^8.6.3",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-loader": "^1.7.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "node-sass": "^4.5.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^5.0.0",
+    "eslint-loader": "^2.0.0",
+    "file-loader": "^1.1.11",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
-    "sass-loader": "^6.0.3",
-    "webpack": "^2.2.1"
+    "sass-loader": "^7.0.3",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {}
 }
