--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "lazy-load-for-videos",
   "version": "2.0.0",
-  "description": "Lazy Load for Videos by [Kevin Weber](https://kevinw.de)",
+  "description": "Lazy Load for Videos by [Kevin Weber](https://www.kweber.com)",
   "scripts": {
     "production": "NODE_ENV=production webpack --progress --colors --config ./webpack.config.js -p",
     "test": "echo \"Error: no test specified\" && exit 1",
