--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "autoprefixer": "^8.6.5",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -50,6 +52,8 @@
     "node-sass": "^4.13.0",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.3.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
