--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.8.3",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "autoprefixer": "^8.6.5",
@@ -51,7 +52,7 @@
     "file-loader": "^1.1.11",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.3.1",
     "ts-loader": "^6.2.1",
