Update compiler options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
         "outDir": "./assets/",
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
         "allowJs": true,
         "jsx": "preserve",
+        "paths": {
+            "*": [
+                "node_modules/*",
+                "types/*"
+            ]
+        },
     }
 }
