--- a/package.json
+++ b/package.json
@@ -36,43 +36,43 @@
   },
   "homepage": "https://github.com/kevinweber/lazy-load-for-videos#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.13",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@types/classnames": "^2.2.11",
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@types/classnames": "^2.3.1",
     "@types/wordpress__block-library": "^2.6.1",
-    "@types/wordpress__blocks": "^6.4.12",
-    "@types/wordpress__compose": "^3.4.3",
-    "@types/wordpress__data": "^4.6.9",
-    "@types/wordpress__hooks": "^2.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^3.1.0",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.6",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@types/wordpress__blocks": "^9.1.1",
+    "@types/wordpress__compose": "^4.0.1",
+    "@types/wordpress__data": "^4.6.10",
+    "@types/wordpress__hooks": "^2.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@wordpress/dependency-extraction-webpack-plugin": "^3.3.2",
+    "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.4.0",
-    "node-sass": "^6.0.1",
-    "postcss-loader": "^6.1.0",
-    "sass-loader": "^12.1.0",
-    "ts-loader": "^8.0.18",
-    "typescript": "^4.2.3",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0"
+    "jest": "^27.5.1",
+    "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
+    "postcss-loader": "^6.2.1",
+    "sass-loader": "^12.6.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@wordpress/block-library": "^2.29.0",
-    "classnames": "^2.2.6",
-    "react": "^16.14.0",
-    "terser-webpack-plugin": "^5.1.1"
+    "classnames": "^2.3.1",
+    "react": "^17.0.2",
+    "@wordpress/block-library": "^2.16.1"
   }
 }
