--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "production:webpack": "NODE_ENV=production webpack --config ./webpack.config.js",
     "development": "NODE_ENV=development webpack --progress --config ./webpack.config.js",
     "test": "jest",
-    "watch:test": "yarn test -- --watch",
-    "watch": "yarn development -- --watch"
+    "watch:test": "yarn test --watch",
+    "watch": "yarn development --watch"
   },
   "repository": "git+https://github.com/kevinweber/lazy-load-for-videos.git",
   "keywords": [
